# pyrato

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  getting_started.ipynb  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  04-documentation.yml  config.yml
.github/workflows/: add_to_project.yml
docs/: Makefile  api_reference.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  pyrato.rst  usage.rst
docs/_static/css/: custom.css
docs/_templates/: navbar-nav.html
docs/modules/: analytic.rst  dsp.rst  edc.rst  parameters.rst  parametric.rst  pyrato.rst
docs/modules/analytic/: analytic.rst  impedance.rst
examples/: energy_decay_curves_and_reverberation_time.ipynb  room_accoustic_parameters.ipynb
pyrato/: __init__.py  analytic.py  dsp.py  edc.py  parameters.py  parametric.py  rap.py  roomacoustics.py  sti.py
pyrato/analytic/: __init__.py  analytic.py  impedance.py
resources/test_data/: analytic_rir_psnr50.csv  analytic_rir_psnr50_len1s_sr11025.csv  edc_chu_lundeby_psnr50.csv  edc_chu_psnr50.csv
roomacoustics/: __init__.py  analytic.py  dsp.py  edc.py  edc_noise_handling.py  edc_noise_handling_test_notebook.ipynb  edc_noise_handling_test_notebook2.ipynb  roomacoustics.py  sti.py  test_edc_noise_handling.py
tests/: conftest.py  test_analytic.py  test_analytic_impedance.py  test_analytic_shoebox.ipynb  test_deprecation_warnings.py  test_dsp.py  test_edc.py  test_edc_fixture.py  test_edc_noise_handling.py  test_parameters.py  test_parameters_clarity.py  test_parameters_definition.py  test_parameters_energy_balance.py  test_parameters_interval_specific_decay_time.py  test_parametric.py  test_parametric_eyring.py  test_roomacoustics.py  test_rt.py  test_schroeder_frequency.py  test_speed_of_sound.py  test_sti.py
tests/data/: analytic_rir_impedance.npy  analytic_rir_impedance_no_cav.npy  analytic_rir_rigid_walls.csv  analytic_rtf_impedance.npy  analytic_rtf_impedance_no_cav.npy
tests/data/analytic_impedance/: k_ns_x.csv  k_ns_x_zeta15.csv  k_ns_y.csv  k_ns_y_zeta15.csv  k_ns_z.csv  k_ns_z_zeta15.csv  ks.csv  mode_indices_zeta15.csv  p_x.csv  p_x_zeta15.csv
tests/private/: comparison_fenics.ipynb  nb_analytic_shoebox.ipynb  rectangular_room_impedance.ipynb  rectangular_room_impedance_intensity.ipynb  rectangular_room_intensity.py
tests/private/fenics/: ks_fenics.csv  p_R_fenics.csv
tests/test_data/: analytic_rir_psnr50_1D.csv  analytic_rir_psnr50_2D.csv  edc_chu_1D.csv  edc_chu_2D.csv  edc_lundeby_1D.csv  edc_lundeby_2D.csv  edc_lundeby_chu_1D.csv  edc_lundeby_chu_2D.csv  edc_truncation_1D.csv  edc_truncation_2D.csv  example_rir48kHz_REWdata.txt  generate_test_data.py  intersection_time_1D.csv  intersection_time_2D.csv  ir_simulated.csv  ir_simulated_mtf_values_from_WINMF.csv  mtf_ir_WINMF.csv  mtf_ir_level_snr_WINMF.csv  mtf_ir_level_snr_masking_WINMF.csv  noise_energy_1D.csv  noise_energy_2D.csv  noise_energy_from_edc_1D.csv  noise_energy_from_edc_2D.csv  preprocessing_1D.csv  preprocessing_2D.csv  preprocessing_time_shift_1D.csv  preprocessing_time_shift_2D.csv  preprocessing_time_shift_channel_independent_1D.csv  preprocessing_time_shift_channel_independent_2D.csv  room_impulse_response_with_noise.csv  smoothed_rir_1D.csv  smoothed_rir_2D.csv  substracted_1D.csv  substracted_2D.csv  test_notebook.ipynb
