[project]
name = "pyrato"
version = "0.4.1"
description = "Collection of functions commonly used in room acoustics."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "The pyfar developers", email = "info@pyfar.org" },
]
keywords = [
    "acoustics",
    "pyfar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    
]
dependencies = [
    'pyfar>=0.5.0',
    'numpy>=1.14.0',
    'scipy>=1.5.0',
    'matplotlib',
]

[project.optional-dependencies]
deploy = [
    "twine",
    "wheel",
    "build",
    "setuptools",
    "bump-my-version",
    ]
tests = [
    "pytest",
    "pytest-cov",
    "watchdog",
    "ruff==0.8.3",
    "coverage",
    
]
docs = [
    "sphinx",
    "autodocsumm>=0.2.14",
    "pydata-sphinx-theme",
    "sphinx_mdinclude",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-reredirects",
]
dev = ["pyrato[deploy,tests,docs]"]

[project.urls]
Tracker = "https://github.com/pyfar/pyrato/issues"
Documentation = "https://pyrato.readthedocs.io/"
Download = "https://pypi.org/project/pyrato/"
Homepage = "https://pyfar.org/"
Source = "https://github.com/pyfar/pyrato"
Changelog = "https://github.com/pyfar/pyrato/blob/main/HISTORY.rst"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters


[tool.ruff]
exclude = [
    ".git",
    "docs",
    "examples/",
    "tests/test_data",
]
line-length = 79
lint.ignore = [
    "D200",   # One-line docstring should fit on one line with quotes
    "D202",   # No blank lines allowed after function docstring
    "D205",   # 1 blank line required between summary line and description
    "D401",   # First line should be in imperative mood
    "D404",   # First word of the docstring should not be "This"
    "B006",   # Do not use mutable data structures for argument defaults

]
lint.select = [
    "A",      # Avoid builtin function and type shadowing
    "ARG",    # Remove unused function/method arguments
    "B",      # bugbear extension
    "C4",     # Check for common security issues
    "COM",    # trailing comma rules
    "D",      # Docstring guidelines
    "D417",   # Missing argument descriptions in the docstring
    "E",      # PEP8 errors
    "ERA",    # No commented out code
    "F",      # Pyflakes
    "FIX",    # Code should not contain FIXME, TODO, etc
    "I002",   # missing required import
    "NPY",    # Check all numpy related deprecations
    "PT",     # Pytest style
    "TID252", # Use absolute over relative imports
    "W",      # PEP8 warnings
]

# Ignore missing docstrings in tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D103",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.bumpversion]
current_version = "0.4.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '\nversion = "{current_version}"'
replace = '\nversion = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyrato/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"
